--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -2,7 +2,7 @@ name: GitHub-Profile-3D-Contrib
 
 on:
   schedule: # 03:00 JST == 18:00 UTC
-    - cron: "0 18 * * *"
+    - cron: '0 18 * * *'
   workflow_dispatch:
 
 jobs:
@@ -17,10 +17,10 @@ jobs:
           USERNAME: ${{ github.repository_owner }}
       - uses: actions/setup-python@v4
         with:
-          python-version: '3.10' 
+          python-version: '3.10'
       - run: python ./bin/change-border.py profile-3d-contrib/profile-night-rainbow.svg profile-3d-contrib/profile-night-rainbow-with-border.svg
-      permissions:
-        contents: write
+      - permissions:
+          contents: write
       - name: Commit & Push
         run: |
           git config user.name github-actions
