--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -4,7 +4,8 @@ on:
   schedule: # 03:00 JST == 18:00 UTC
     - cron: '0 18 * * *'
   workflow_dispatch:
-
+permissions:
+  contents: write
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -19,8 +20,6 @@ jobs:
         with:
           python-version: '3.10'
       - run: python ./bin/change-border.py profile-3d-contrib/profile-night-rainbow.svg profile-3d-contrib/profile-night-rainbow-with-border.svg
-      - permissions:
-          contents: write
       - name: Commit & Push
         run: |
           git config user.name github-actions
