--- a/.github/workflows/lgtm_list.yml
+++ b/.github/workflows/lgtm_list.yml
@@ -17,8 +17,7 @@ jobs:
         run: ./bin/make_lgtm.sh
       - name: Commit & Push
         run: |
-          git config user.name wahabu
-          git config user.email ritscg2hibo@gmail.com
+          git config --global user.name "github-actions[bot]"
+          git config --global user.email "github-actions[bot]@users.noreply.github.com"
           git add -A .
-          git commit -m "create LGTM list"
-          git push
+          git diff --cached --exit-code --quiet || (git commit -m "generated" && git push)
