--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   "directories": {
     "doc": "docs"
   },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
+  // "scripts": {
+  //   "test": "echo \"Error: no test specified\" && exit 1"
+  // },
   "author": "",
   "license": "ISC"
 }
