--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -1,10 +1,11 @@
 name: GitHub-Profile-3D-Contrib
 
 on:
-  # schedule: # 03:00 JST == 18:00 UTC
-  #    - cron: '0 18 * * *'
+  schedule: # 03:00 JST == 18:00 UTC
+     - cron: '0 18 * * *'
   workflow_dispatch:
-
+permissions:
+  contents: write
 jobs:
   build:
     runs-on: ubuntu-latest
