--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -1,25 +1,30 @@
 name: GitHub-Profile-3D-Contrib
 
 on:
-  schedule: # 03:00 JST == 18:00 UTC
-     - cron: '0 18 * * *'
+  schedule:
+    # Run the workflow daily at 18:00 UTC (03:00 JST)
+    - cron: '0 18 * * *'
   workflow_dispatch:
-permissions:
-  contents: write
+
 jobs:
   build:
     runs-on: ubuntu-latest
     name: generate-github-profile-3d-contrib
     steps:
+      # Checkout the repository
       - uses: actions/checkout@v3
+      # Generate 3D contribution graph
       - uses: yoshi389111/github-profile-3d-contrib@0.7.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USERNAME: ${{ github.repository_owner }}
+      # Setup Python 3.10
       - uses: actions/setup-python@v4
         with:
           python-version: '3.10'
+      # Run the script to change the border of the 3D contribution graph
       - run: python ./bin/change-border.py profile-3d-contrib/profile-night-rainbow.svg profile-3d-contrib/profile-night-rainbow-with-border.svg
+      # Commit and push the changes
       - name: Commit & Push
         run: |
           git config --global user.name wahabu
