--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -16,7 +16,7 @@ jobs:
       # Generate 3D contribution graph
       - uses: yoshi389111/github-profile-3d-contrib@0.7.1
         env:
-          GITHUB_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.MY_PAT }}
           USERNAME: ${{ github.repository_owner }}
       # Setup Python 3.10
       - uses: actions/setup-python@v4
@@ -26,8 +26,9 @@ jobs:
       - run: python ./bin/change-border.py profile-3d-contrib/profile-night-rainbow.svg profile-3d-contrib/profile-night-rainbow-with-border.svg
       # Commit and push the changes
       - name: Commit & Push
-        run: |
-          git config --global user.name wahabu
-          git config --global user.email ritscg2hibo@gmail.com
-          git add .
-          git diff --cached --exit-code --quiet || (git commit -m "generated" && git push)
+        uses: actions-js/push@v1
+        with:
+          github_token: ${{ secrets.MY_PAT }}
+          user_name: wahabu
+          user_email: ritscg2hibo@gmail.com
+          commit_message: 'generated'
