--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Commit & Push
         uses: actions-js/push@v1
         with:
-          github_token: ${{ secrets.MY_PAT }}
+          github_token: ${{ secrets.ACCESS_TOKEN }}
           user_name: wahabu
           user_email: ritscg2hibo@gmail.com
           commit_message: 'generated'
