--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -28,7 +28,7 @@ jobs:
       - name: Commit & Push
         uses: EndBug/add-and-commit@v7.3.0
         with:
-          author_name: wahabu
-          author_email: ritscg2hibo@gmail.com
+          author_name: github-actions
+          author_email: github-actions@github.com
           message: 'generated'
           token: ${{ secrets.ACCESS_TOKEN }}
