--- a/.github/workflows/lgtm_list.yml
+++ b/.github/workflows/lgtm_list.yml
@@ -1,22 +1,49 @@
 name: LGTM list
 
+permissions:
+  contents: write
+
+concurrency:
+  group: lgtm-${{ github.ref }}
+  cancel-in-progress: false
+
 on:
   workflow_dispatch:
   pull_request:
-    paths: 'LGTM/**'
+    paths:
+      - 'LGTM/**'
   push:
-    paths: 'LGTM/**'
+    paths:
+      - 'LGTM/**'
 
 jobs:
   create_list:
     runs-on: ubuntu-latest
+
     steps:
-      - uses: actions/checkout@v3
+      # 1️⃣ Checkout full history
+      - name: Checkout repository
+        uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: main
+
+      # 2️⃣ Generate LGTM list (your script)
       - name: Create LGTM list
         run: ./bin/make_lgtm.sh
+
+      # 3️⃣ Commit & Push safely
       - name: Commit & Push
         run: |
-          git config --global user.name "github-actions[bot]"
-          git config --global user.email "github-actions[bot]@users.noreply.github.com"
-          git add -A .
-          git diff --cached --exit-code --quiet || (git commit -m "generated" && git push)
+          git config user.name "wahabu"
+          git config user.email "12345678+wahabu@users.noreply.github.com"
+
+          git add -A
+          git diff --cached --quiet && exit 0
+
+          git commit -m "generated"
+
+          # Rebase to avoid non-fast-forward issues
+          git fetch origin
+          git pull --rebase origin main || true
+          git push origin HEAD:main
