Update GitHub Actions: fix commit dates and improve safety

--- a/.github/workflows/lgtm_list.yml
+++ b/.github/workflows/lgtm_list.yml
@@ -21,29 +21,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      # 1️⃣ Checkout full history
+      # 1) Checkout full history
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          fetch-depth: 0
           ref: main
+          fetch-depth: 0
 
-      # 2️⃣ Generate LGTM list (your script)
+      # 2) Generate LGTM list (your script)
       - name: Create LGTM list
         run: ./bin/make_lgtm.sh
 
-      # 3️⃣ Commit & Push safely
+      # 3) Force current UTC date for the commit (avoid old years)
+      - name: Fix commit date (force current UTC date)
+        run: |
+          export GIT_AUTHOR_DATE="$(date -u '+%Y-%m-%d %H:%M:%S %z')"
+          export GIT_COMMITTER_DATE="$GIT_AUTHOR_DATE"
+
+      # 4) Commit & Push safely
       - name: Commit & Push
         run: |
-          git config user.name "wahabu"
-          git config user.email "12345678+wahabu@users.noreply.github.com"
+          git config user.name  "wahabu"
+          # ⬇️ Replace with your real noreply (from GitHub Settings → Emails)
+          git config user.email "52596957+wahabu@users.noreply.github.com"
 
           git add -A
           git diff --cached --quiet && exit 0
 
           git commit -m "generated"
 
-          # Rebase to avoid non-fast-forward issues
           git fetch origin
           git pull --rebase origin main || true
           git push origin HEAD:main
