--- a/.github/workflows/profile-3d.yml
+++ b/.github/workflows/profile-3d.yml
@@ -9,7 +9,7 @@ concurrency:
 
 on:
   schedule:
-    # Runs daily at 18:00 UTC (→ 03:00 JST next day)
+    # Runs daily at 18:00 UTC (≈ 03:00 JST next day)
     - cron: '0 18 * * *'
   workflow_dispatch:
 
@@ -19,21 +19,21 @@ jobs:
     name: generate-github-profile-3d-contrib
 
     steps:
-      # 1) Checkout full history on main (not shallow to avoid non-fast-forward)
+      # 1) Checkout full history on main (avoid shallow clones)
       - name: Checkout
         uses: actions/checkout@v4
         with:
           ref: main
           fetch-depth: 0
 
-      # 2) Generate 3D contribution assets
+      # 2) Generate 3D contribution graph assets
       - name: Generate 3D SVG
         uses: yoshi389111/github-profile-3d-contrib@0.7.1
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           USERNAME: ${{ github.repository_owner }}
 
-      # 3) Python (if you need to post-process the SVG)
+      # 3) (Optional) Post-process with Python
       - name: Setup Python
         uses: actions/setup-python@v5
         with:
@@ -45,22 +45,24 @@ jobs:
             profile-3d-contrib/profile-night-rainbow.svg \
             profile-3d-contrib/profile-night-rainbow-with-border.svg
 
-      # 4) Commit & push safely (rebase on remote to avoid non-fast-forward)
+      # 4) Force current UTC date for the commit (avoid old years)
+      - name: Fix commit date (force current UTC date)
+        run: |
+          export GIT_AUTHOR_DATE="$(date -u '+%Y-%m-%d %H:%M:%S %z')"
+          export GIT_COMMITTER_DATE="$GIT_AUTHOR_DATE"
+
+      # 5) Commit & Push safely (rebase to avoid non-fast-forward)
       - name: Commit & Push
         run: |
-          # Use noreply so commits belong to your GitHub account
-          git config user.name "wahabu"
-          git config user.email "ritscg2hibo@gmail.com"  # OR: <52596957+wahabu@users.noreply.github.com>
+          git config user.name  "wahabu"
+          # ⬇️ Replace with your real noreply (from GitHub Settings → Emails)
+          git config user.email "52596957+wahabu@users.noreply.github.com"
 
           git add -A
-          # Skip if no changes
           git diff --cached --quiet && exit 0
 
           git commit -m "generated"
 
-          # Rebase on latest remote to prevent non-fast-forward
           git fetch origin
           git pull --rebase origin main || true
-
-          # Push current HEAD to main
           git push origin HEAD:main
